# Rev

./: .gitignore  CMakeLists.txt
Demo/: CMakeLists.txt
Demo/source/: Interface.ixx  MacInterface.ixx  Styles.ixx  main.cpp  main.ixx
Rev/: CMakeLists.txt  ReadMe.md
Rev/resources/Shaders/Lines/: Lines.frag
Rev/resources/Shaders/Metal/Lines/: Lines.metal
Rev/resources/Shaders/Metal/Rectangle/: Rectangle.metal  RectangleStencil.metal
Rev/resources/Shaders/Metal/Text/: Text.metal
Rev/resources/Shaders/Metal/Triangles/: Triangles.metal
Rev/resources/Shaders/OpenGL/Lines/: Lines.frag  Lines.vert
Rev/resources/Shaders/OpenGL/Rectangle/: Rectangle.frag  Rectangle.vert
Rev/resources/Shaders/OpenGL/Text/: Text.frag
Rev/resources/Shaders/OpenGL/Triangles/: Triangles.frag  Triangles.vert
Rev/resources/Shaders/Rectangle/: Rectangle.frag  Rectangle.vert
Rev/resources/Shaders/Rectangle/Stencil/: RectangleStencil.frag  RectangleStencil.vert
Rev/resources/Shaders/Text/: Text.vert
Rev/resources/Shaders/Triangles/: Triangles.frag
Rev/scripts/: Create_Resource_Modules.sh
Rev/src/: Application.ixx  GlobalTime.ixx  Window.ixx
Rev/src/Canvas/OpenGL/: CanvasOpenGL.ixx  Pipeline.ixx
Rev/src/Canvas/OpenGL/Objects/: UniformBuffer.ixx  VertexBuffer.ixx
Rev/src/Canvas/OpenGL/Primitives/: Lines.ixx  Rectangle.ixx  Text.ixx  Triangles.ixx
Rev/src/Canvas/Vulkan/: Surface.ixx
Rev/src/Core/: Color.ixx  DirtyFlag.ixx  Font.ixx  Line.ixx  Lrtb.ixx  Pos.ixx  Rect.ixx  Resource.ixx  Shared.ixx  Transform.ixx  Vertex.ixx  View.ixx
Rev/src/Element/: Computed.ixx  Element.ixx  Resolved.ixx
Rev/src/Element/Event/: Event.ixx
Rev/src/Element/Style/: Style.ixx
Rev/src/Elements/: Box.ixx  TextBox.ixx
Rev/src/Elements/Controls/: Box.ixx  Slider.ixx
Rev/src/Elements/Display/: Chart.ixx
Rev/src/Graphics/Metal/: Canvas.Metal.ixx  FrameBuffer.Metal.ixx  Pipeline.Metal.ixx  Shader.Metal.ixx  Texture.Metal.ixx  UniformBuffer.Metal.ixx  VertexBuffer.Metal.ixx
Rev/src/Graphics/Metal/Helpers/: MetalBackend.hpp  MetalBackend.mac.mm  MetalBackend.mm
Rev/src/Graphics/OpenGL/: Canvas.OpenGL.ixx  Canvas.ixx  FrameBuffer.OpenGL.ixx  Pipeline.OpenGL.ixx  RenderCommandEncoder.OpenGL.ixx  Shader.OpenGL.ixx  Texture.OpenGL.ixx  UniformBuffer.OpenGL.ixx  VertexBuffer.OpenGL.ixx
Rev/src/Graphics/OpenGL/Objects/: UniformBuffer.ixx  VertexBuffer.ixx
Rev/src/Graphics/OpenGL/Primitives/: Lines.ixx  Primitive.ixx  Rectangle.ixx  Text.ixx  Triangles.ixx
Rev/src/Graphics/Primitives/: Lines.ixx  Primitive.ixx  Rectangle.ixx  Text.ixx  Triangles.ixx
Rev/src/Graphics/Primitives/Lines/: Lines.ixx  TriangulatePolyline.hpp
Rev/src/Graphics/Primitives/Rectangle/: Rectangle.ixx  RectanglePipeline.Metal.ixx  RectanglePipeline.OpenGL.ixx
Rev/src/Graphics/Primitives/Text/: Text.ixx  TextPipeline.Metal.ixx  TextPipeline.OpenGL.ixx
Rev/src/Graphics/Primitives/Triangles/: Triangles.ixx
Rev/src/Graphics/Universal/: Canvas.Universal.ixx  Pipeline.Universal.ixx  Primitive.Universal.ixx  RenderCommandEncoder.ixx  Shader.Universal.ixx  Texture.Universal.ixx  UniformBuffer.Universal.ixx  VertexBuffer.Universal.ixx
Rev/src/Graphics/Vulkan/: Canvas.Vulkan.ixx  Framebuffers.ixx  Surface.Vulkan.ixx  Vulkan.ixx
Rev/src/Native/: NativeWindow.mac.h  NativeWindow.mac.ixx  NativeWindow.mac.mm  NativeWindow.win.ixx  WinEvent.hpp
Rev/src/Native/MacOS/: Application.mac.ixx  NativeWindow.mac.h  NativeWindow.mac.ixx  NativeWindow.mac.mm
Rev/src/Native/Windows/: Application.win.ixx  NativeWindow.win.ixx
Rev/src/Structs/: Color.ixx  DirtyFlag.ixx  Font.ixx  Rect.ixx  Vertex.ixx
resources/.modules/Fonts/Roboto/: Roboto_ttf.ixx
resources/.modules/Shaders/: Triangle_wgsl.ixx
resources/Shaders/: RoundedBox.wgsl  Triangle.wgsl  Triangles.wgsl
resources/Shaders/OpenGL/Rectangle/: Rectangle.frag  Rectangle.vert
resources/Shaders/OpenGL/Text/: Text.frag  Text.vert
resources/Shaders/OpenGL/Triangles/: Triangles.frag
resources/Shaders/RoundedBox/: Compute.wgsl  Fragment.wgsl  RoundedBox.wgsl  Vertex.wgsl
resources/Shaders/Vulkan/RoundedBox/: Compute.wgsl  Fragment.wgsl
scripts/: Create_Resource_Modules.sh
src/: Application.ixx  Element.ixx  Interface.ixx  Style.ixx  Styles.ixx  Window.ixx  main.cpp  main.ixx
src/DirectX/: DirectX.ixx
src/Rev/: Application.ixx  Element.ixx  GlobalTime.ixx  Rev.ixx  Window.ixx  WindowOld.ixx
src/Rev/Canvas/: CanvasOpenGL.ixx  CanvasVk.ixx
src/Rev/Canvas/Metal/: Canvas.ixx
src/Rev/Canvas/OpenGL/: CanvasOpenGL.ixx  Shader.ixx
src/Rev/Canvas/OpenGL/Objects/: Texture.ixx  VertexBuffer.ixx
src/Rev/Canvas/OpenGL/Primitives/: Lines.ixx  Primitive.ixx  Rectangle.ixx  Text.ixx  Triangles.ixx
src/Rev/Canvas/OpenGL/Primitives/Utils/: TriangulatePolyline.hpp
src/Rev/Canvas/Vulkan/: CanvasVk.ixx  CommandPool.ixx  Device.ixx  Vulkan.ixx
src/Rev/Element/: Computed.ixx  Element.ixx  Resolved.ixx
src/Rev/Element/Event/: Event.ixx
src/Rev/Element/Style/: Style.ixx
src/Rev/Elements/: Box.ixx  Text.ixx  TextBox.ixx
src/Rev/Elements/Controls/: Slider.ixx
src/Rev/Graphics/: Backend.ixx  MacOS.mm  Metal.cpp
src/Rev/Native/: NativeWindow.win.ixx
src/Rev/Structs/: Font.ixx  Pos.ixx  Rect.ixx
src/Skia/: Skia.ixx
src/Vulkan/: Device.ixx  Framebuffers.ixx  Renderpass.ixx  Surface.ixx  Swapchain.ixx
src/WebGpu/: GlobalTimeBuffer.ixx  Pipeline.ixx  PipelineOld.ixx  Primitive.ixx  Shader.ixx  Topology.ixx  Transform.ixx  WebGpu.ixx  webgpu-utils.cpp  webgpu-utils.h
src/WebGpu/Buffer/: AnimatedBuffer.ixx  AttributeBuffer.ixx  Buffer.ixx  UniformBuffer.ixx  VertexBuffer.ixx
src/WebGpu/Objects/: Rectangle.ixx  Shader.ixx  VertexBuffer.ixx
src/WebGpu/Primitives/: RoundedBox.ixx  RoundedBoxOld.ixx  Triangle.ixx  Triangles.ixx
src/WebGpu/Primitives/Triangle/: Triangle.ixx  Triangle.wgsl
src/WebGpu/Structs/: Color.ixx  Vertex.ixx
